// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree should not re-run load on parent/child machine transitions 1`] = `
Array [
  "child1",
  "one",
]
`;

exports[`xstate-component-tree should not re-run load on parent/child machine transitions 2`] = `
Array [
  "two",
]
`;

exports[`xstate-component-tree should not re-run load on parent/child machine transitions 3`] = `
Array [
  "child2",
]
`;

exports[`xstate-component-tree should pass child machine context & events to load fns 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": Object {
          "ctx": "child context",
          "event": Object {
            "type": "xstate.init",
          },
        },
        "props": false,
      },
    ],
    "component": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support async .load 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "props": false,
      },
    ],
    "component": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support returning a component and props 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "props": Object {
          "props": true,
        },
      },
    ],
    "component": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support sync .load 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "props": false,
      },
    ],
    "component": "one",
    "props": false,
  },
]
`;
